# assertical

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: coverage.yml  linttest.yml
src/assertical/: snapshot.py
src/assertical/asserts/: generator.py  pandas.py  time.py  type.py
src/assertical/fake/: __init__.py  asyncio.py  generator.py  http.py  sqlalchemy.py
src/assertical/fixtures/: __init__.py  environment.py  fastapi.py  generator.py  postgres.py
tests/: conftest.py  test_snapshot.py
tests/asserts/: test_assert_pandas.py  test_assert_time.py  test_assert_type.py
tests/fake/: test_asyncio.py  test_generator.py  test_generator_common.py  test_generator_complex_example.py  test_generator_dataclass.py  test_generator_py310_optional.py  test_generator_pydantic.py  test_generator_pydantic_xml.py  test_generator_sql_alchemy.py  test_http.py
tests/fixtures/: test_environment.py  test_fastapi.py  test_generator_fixtures.py
vscode/: settings.json
