[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]
ignore = ["E721", "B017", "UP035", "E731", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"src/**" = ["ANN401"]
"**/asserts/**" = ["S101", "B011"]
"tests/**" = ["S", "ANN", "N"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
invalid-type-form = "ignore"

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assertical"
version = "0.3.3"
description = "Assertical - a modular library for helping write (async) integration/unit tests for fastapi/sqlalchemy/postgres projects"
authors = [{ name = "Battery Storage and Grid Integration Program" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["test", "fastapi", "postgres", "sqlalchemy"]
dependencies = ["pytest", "pytest-asyncio", "anyio", "httpx"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",

    # Pick your license as you wish (see also "license" above)
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/bsgip/assertical"

[project.optional-dependencies]
all = ["assertical[dev,fastapi,pandas,pydantic,postgres,xml]"]
dev = ["bandit", "ruff", "ty", "coverage"]
fastapi = ["fastapi[standard]", "asgi_lifespan", "uvicorn"]
pandas = ["pandas", "pandas_stubs", "numpy"]
pydantic = ["pydantic"]
postgres = ["pytest-postgresql", "psycopg", "sqlalchemy>=2.0.0"]
xml = ["pydantic_xml[lxml]!=2.17.1"]

[tool.setuptools.package-data]
"assertical" = ["py.typed"]
